phantom right-gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+html,body {
+    margin:0;
+    padding:0;
+    overflow-x:hidden;
+}
+
     /* NavBar Start */
     .navbar{
         position: sticky;
@@ -282,3 +288,4 @@ body{
             display: block;
          }
     }
+    
